// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal render correctly 1`] = `
<div>
  <div />
  <div>
    <div
      class="wmstool-modal-mask fade-appear"
    />
    <div
      class="wmstool-modal-wrap "
      role="dialog"
      tabindex="-1"
    >
      <div
        class="wmstool-modal zoom-appear"
        role="document"
        style="width: 520px;"
      >
        <div
          class="wmstool-modal-content"
        >
          <button
            aria-label="Close"
            class="wmstool-modal-close"
          >
            <span
              class="wmstool-modal-close-x"
            />
          </button>
          <div
            class="wmstool-modal-body"
          >
            Here is content of Modal
          </div>
          <div
            class="wmstool-modal-footer"
          >
            <div>
              <button
                class="wmstool-btn"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="wmstool-btn wmstool-btn-primary"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden;"
          tabindex="0"
        >
          sentinel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal render without footer 1`] = `
<div>
  <div />
  <div>
    <div
      class="wmstool-modal-mask fade-appear"
    />
    <div
      class="wmstool-modal-wrap "
      role="dialog"
      tabindex="-1"
    >
      <div
        class="wmstool-modal zoom-appear"
        role="document"
        style="width: 520px;"
      >
        <div
          class="wmstool-modal-content"
        >
          <button
            aria-label="Close"
            class="wmstool-modal-close"
          >
            <span
              class="wmstool-modal-close-x"
            />
          </button>
          <div
            class="wmstool-modal-body"
          >
            Here is content of Modal
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden;"
          tabindex="0"
        >
          sentinel
        </div>
      </div>
    </div>
  </div>
</div>
`;
